compiler/testData/diagnostics/tests/override/AbstractValNotImplemented.kt
abstract class A {
    abstract val i: Int
}

<!ABSTRACT_CLASS_MEMBER_NOT_IMPLEMENTED!>class B<!>() : A() {
}
